--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.3",
     "path": "^0.12.7",
+    "react-helmet": "^6.1.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
