--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
+    "css-loader": "^6.7.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
@@ -20,6 +21,7 @@
     "nodemailer": "^6.7.3",
     "path": "^0.12.7",
     "react-helmet": "^6.1.0",
+    "style-loader": "^3.3.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
